Version 0.8.3 Start working on map-matching. Changed the ground-truth map-matching folder to support both route and point matching. Enable the RoadNetworkGraph to support search by road and node id.
TODO: Test the Beijing point match result.